tests/paczka1/fuzzy1/23465312.err
Error in line 4: slU6nOP0xCK S490 58,3
Error in line 24: ioHUQo2V S556 15,0
Error in line 25: VtVcg S90 39,4
Error in line 32: slU6nOP0xCK S89 95,5
